--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a href="/screened-transactions" class="nav-link contact">View shady transactions</a>
+                    <a href="/screened-transactions" class="nav-link contact">View Screen Failed transactions</a>
                 </li>
             </ul>
         </div>
